# packages/contracts/src/api.generated.ts
@@ -1182,6 +1182,23 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/v1/templates/categories": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Categories */
+        get: operations["categories_api_v1_templates_categories_get"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/api/v1/templates/{slug}": {
         parameters: {
             query?: never;
@@ -3522,6 +3539,13 @@ export interface components {
             price: components["schemas"]["MoneyResponse"];
             /** State */
             state: string;
+        };
+        /** TemplateCategorySummary */
+        TemplateCategorySummary: {
+            /** Name */
+            name: string;
+            /** Slug */
+            slug: string;
         };
         /** TemplateCreateRequest */
         TemplateCreateRequest: {
@@ -6021,6 +6045,26 @@ export interface operations {
                 };
                 content: {
                     "application/json": components["schemas"]["HTTPValidationError"];
+                };
+            };
+        };
+    };
+    categories_api_v1_templates_categories_get: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["TemplateCategorySummary"][];
                 };
             };
         };
